rl.output
Terminals unused in grammar

   OBRACE
   EBRACE
   OFBRACE
   EFBRACE
   TEST


Grammar

    0 $accept: body $end

    1 body: /* empty */
    2     | body command

    3 command: operators SEMICOLON

    4 const: NUMBCONST
    5      | BOOLCONST

    6 ident: BOOLIDNT
    7      | NUMBIDNT

    8 operators: returnable_operators
    9          | nonreturnable_operators

   10 returnable_operators: ident ASSIGOPER const
   11                     | ident EQOPER const
   12                     | ident DECOPER
   13                     | ident INCOPER
   14                     | ident

   15 nonreturnable_operators: PRINTOPER returnable_operators


Terminals, with rules where they appear

$end (0) 0
error (256)
OBRACE (258)
EBRACE (259)
OFBRACE (260)
EFBRACE (261)
SEMICOLON (262) 3
TEST (263)
BOOLIDNT (264) 6
NUMBIDNT (265) 7
BOOLCONST (266) 5
NUMBCONST (267) 4
ASSIGOPER (268) 10
EQOPER (269) 11
INCOPER (270) 13
DECOPER (271) 12
PRINTOPER (272) 15


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
body (19)
    on left: 1 2, on right: 0 2
command (20)
    on left: 3, on right: 2
const (21)
    on left: 4 5, on right: 10 11
ident (22)
    on left: 6 7, on right: 10 11 12 13 14
operators (23)
    on left: 8 9, on right: 3
returnable_operators (24)
    on left: 10 11 12 13 14, on right: 8 15
nonreturnable_operators (25)
    on left: 15, on right: 9


state 0

    0 $accept: . body $end

    $default  reduce using rule 1 (body)

    body  go to state 1


state 1

    0 $accept: body . $end
    2 body: body . command

    $end       shift, and go to state 2
    BOOLIDNT   shift, and go to state 3
    NUMBIDNT   shift, and go to state 4
    PRINTOPER  shift, and go to state 5

    command                  go to state 6
    ident                    go to state 7
    operators                go to state 8
    returnable_operators     go to state 9
    nonreturnable_operators  go to state 10


state 2

    0 $accept: body $end .

    $default  accept


state 3

    6 ident: BOOLIDNT .

    $default  reduce using rule 6 (ident)


state 4

    7 ident: NUMBIDNT .

    $default  reduce using rule 7 (ident)


state 5

   15 nonreturnable_operators: PRINTOPER . returnable_operators

    BOOLIDNT  shift, and go to state 3
    NUMBIDNT  shift, and go to state 4

    ident                 go to state 7
    returnable_operators  go to state 11


state 6

    2 body: body command .

    $default  reduce using rule 2 (body)


state 7

   10 returnable_operators: ident . ASSIGOPER const
   11                     | ident . EQOPER const
   12                     | ident . DECOPER
   13                     | ident . INCOPER
   14                     | ident .

    ASSIGOPER  shift, and go to state 12
    EQOPER     shift, and go to state 13
    INCOPER    shift, and go to state 14
    DECOPER    shift, and go to state 15

    $default  reduce using rule 14 (returnable_operators)


state 8

    3 command: operators . SEMICOLON

    SEMICOLON  shift, and go to state 16


state 9

    8 operators: returnable_operators .

    $default  reduce using rule 8 (operators)


state 10

    9 operators: nonreturnable_operators .

    $default  reduce using rule 9 (operators)


state 11

   15 nonreturnable_operators: PRINTOPER returnable_operators .

    $default  reduce using rule 15 (nonreturnable_operators)


state 12

   10 returnable_operators: ident ASSIGOPER . const

    BOOLCONST  shift, and go to state 17
    NUMBCONST  shift, and go to state 18

    const  go to state 19


state 13

   11 returnable_operators: ident EQOPER . const

    BOOLCONST  shift, and go to state 17
    NUMBCONST  shift, and go to state 18

    const  go to state 20


state 14

   13 returnable_operators: ident INCOPER .

    $default  reduce using rule 13 (returnable_operators)


state 15

   12 returnable_operators: ident DECOPER .

    $default  reduce using rule 12 (returnable_operators)


state 16

    3 command: operators SEMICOLON .

    $default  reduce using rule 3 (command)


state 17

    5 const: BOOLCONST .

    $default  reduce using rule 5 (const)


state 18

    4 const: NUMBCONST .

    $default  reduce using rule 4 (const)


state 19

   10 returnable_operators: ident ASSIGOPER const .

    $default  reduce using rule 10 (returnable_operators)


state 20

   11 returnable_operators: ident EQOPER const .

    $default  reduce using rule 11 (returnable_operators)
